# advent-of-code-2022

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day22_part2.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  fetch.rs  lib.rs  pathfind.rs  queue.rs
src/day1/: calories.rs
src/day2/: mod.rs  rockpaperscissors.rs
src/day3/: rucksack.rs
src/day4/: cleanup.rs
