[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
itertools = "0.10.5"
reqwest = {version ="0.11.13", features= ["cookies", "blocking"]}

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
